--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -183,7 +183,7 @@ a {
 
 .button {
     @include text-label;
-    padding: 0.75em 1.5em 0.25em;
+    padding: 0.6em 1.5em 0.5em;
     height: 48px;
     min-width: 7em;
     cursor: pointer;
@@ -200,7 +200,7 @@ button {
     border: 0;
     font-family: inherit;
     transition: $transition;
-    padding: 0.65em 0.5em 0.4em;
+    padding: 0.6em 0.5em 0.5em;
 }
 
 p {
